--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 		<secttion class="taskList">
 			<h2>List</h2>
 			<div id="tasks">
-				<div class="task">
-					<!-- <div class="content">
+				<!-- <div class="task">
+					<div class="content">
 						<input 
 							type="text" 
 							class="text" 
@@ -40,8 +40,8 @@
 					<div class="actions">
 						<button class="edit">Edit</button>
 						<button class="delete">Delete</button>
-					</div> -->
-				</div>
+					</div>
+				</div> -->
 			</div>
 		</secttion>
 	</main>
